--- a/Style.css
+++ b/Style.css
@@ -66,10 +66,18 @@ a:hover{
     color : gray;
 }
 
-.Limitation {
+.Limitation1 {
     border-top : 5px solid;
     border-left: 5px solid;
     border-right: 5px solid;
     border-bottom: 5px solid;
     border-color: white;
+}
+
+.Limitation2 {
+    border-top : 5px solid;
+    border-left: 5px solid;
+    border-right: 5px solid;
+    border-bottom: 5px solid;
+    border-color: black;
 }
